--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Ethan Wang">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>顏文字</title>
 <style>
 span {white-space: pre;}
@@ -40,8 +44,7 @@ span {white-space: pre;}
 ╭┛ ┃┃ ┗-╮</span><br>
 <script>//you can place js here</script>
 <button type="button" onclick='navigator.clipboard.writeText("what the fuck is this pice of shit??????")'>Click Me!</button><!--example of onclick-->
-<script src="scripts/jquery.min.js"></script><!--you can place js in a local file-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><!--you can use a remote js file-->
-<script src="scripts/main.js"></script>
+<script src="scripts/main.js"></script><!--you can place js in a local file-->
 </body>
 </html>
